fix: read sample data from data dir

--- a/KPI.ipynb
+++ b/KPI.ipynb
@@ -41,9 +41,9 @@
     {
       "cell_type": "code",
       "source": [
-        "customer_file = 'customer_data.csv'\n",
-        "purchase_file = 'purchase_data.csv'\n",
-        "sales_file = 'sales_data.csv'\n",
+        "customer_file = 'data/customer_data.csv'\n",
+        "purchase_file = 'data/purchase_data.csv'\n",
+        "sales_file = 'data/sales_data.csv'\n",
         "start_date_str = '2024-01-01'\n",
         "end_date_str = '2024-12-31'\n",
         "\n",
