wip: load KPI.ipynb with vscode

--- a/KPI.ipynb
+++ b/KPI.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -31,15 +17,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "ファイルパスと集計期間の設定"
-      ],
       "metadata": {
         "id": "rmPhPdtYYFNT"
-      }
+      },
+      "source": [
+        "ファイルパスと集計期間の設定"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "X1pBqrYkX_eb"
+      },
+      "outputs": [],
       "source": [
         "customer_file = 'data/customer_data.csv'\n",
         "purchase_file = 'data/purchase_data.csv'\n",
@@ -49,24 +40,24 @@
         "\n",
         "start_date = pd.to_datetime(start_date_str).date() if start_date_str else None\n",
         "end_date = pd.to_datetime(end_date_str).date() if end_date_str else None"
-      ],
-      "metadata": {
-        "id": "X1pBqrYkX_eb"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "データの読み込み"
-      ],
       "metadata": {
         "id": "SOgH8IcIYLeO"
-      }
+      },
+      "source": [
+        "データの読み込み"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "p08Xiq_tYMRc"
+      },
+      "outputs": [],
       "source": [
         "try:\n",
         "    customer_df = pd.read_csv(customer_file)\n",
@@ -97,24 +88,24 @@
         "except Exception as e:\n",
         "    print(f\"エラー: '{sales_file}' の読み込み中に予期しないエラーが発生しました: {e}\")\n",
         "    sales_df = None"
-      ],
-      "metadata": {
-        "id": "p08Xiq_tYMRc"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "売上データのKPI算出"
-      ],
       "metadata": {
         "id": "OlxW7pxyYVwD"
-      }
+      },
+      "source": [
+        "売上データのKPI算出"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "jhPv1FMeYX7_"
+      },
+      "outputs": [],
       "source": [
         "sales_kpis = {}\n",
         "if sales_df is not None and not sales_df.empty:\n",
@@ -152,24 +143,24 @@
         "        print(\"売上データに 'sales_date' 列が存在しません。\")\n",
         "else:\n",
         "    print(\"売上データが空です。売上KPIの算出をスキップします。\")"
-      ],
-      "metadata": {
-        "id": "jhPv1FMeYX7_"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "顧客データのKPI算出"
-      ],
       "metadata": {
         "id": "UEcEP8F8YeGh"
-      }
+      },
+      "source": [
+        "顧客データのKPI算出"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "3tWdyo8wYhUj"
+      },
+      "outputs": [],
       "source": [
         "customer_kpis = {}\n",
         "if customer_df is not None and not customer_df.empty and sales_df is not None and not sales_df.empty and 'customer_id' in sales_df.columns and 'sales_date' in sales_df.columns:\n",
@@ -190,24 +181,24 @@
         "    }\n",
         "else:\n",
         "    print(\"顧客データまたは売上データが不十分なため、顧客KPIの算出をスキップします。\")"
-      ],
-      "metadata": {
-        "id": "3tWdyo8wYhUj"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "仕入れデータのKPI算出"
-      ],
       "metadata": {
         "id": "fy6SoY78Yj5v"
-      }
+      },
+      "source": [
+        "仕入れデータのKPI算出"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "pBgIdiiAYq4f"
+      },
+      "outputs": [],
       "source": [
         "purchase_kpis = {}\n",
         "if purchase_df is not None and not purchase_df.empty:\n",
@@ -236,24 +227,24 @@
         "        print(\"仕入れデータに 'purchase_date' 列が存在しません。\")\n",
         "else:\n",
         "    print(\"仕入れデータが空です。仕入れKPIの算出をスキップします。\")"
-      ],
-      "metadata": {
-        "id": "pBgIdiiAYq4f"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "分析結果の出力"
-      ],
       "metadata": {
         "id": "Qy4MJI_3Y1H8"
-      }
+      },
+      "source": [
+        "分析結果の出力"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "jUaAObEDYyQi"
+      },
+      "outputs": [],
       "source": [
         "results = {\n",
         "    \"sales_kpis\": sales_kpis,\n",
@@ -264,12 +255,21 @@
         "print(\"\\n--- 分析結果 ---\")\n",
         "print(json.dumps(results, indent=4, ensure_ascii=False))\n",
         "print(\"データ分析を完了しました。\")"
-      ],
-      "metadata": {
-        "id": "jUaAObEDYyQi"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
