fix: fix fatal errors

--- a/KPI.ipynb
+++ b/KPI.ipynb
@@ -76,7 +76,7 @@
     "    print(f\"エラー: ファイル '{purchase_file}' が見つかりません。\")\n",
     "    purchase_df = None\n",
     "except Exception as e:\n",
-    "    printr(f\"エラー: '{purchase_file}' の読み込み中に予期しないエラーが発生しました: {e}\")\n",
+    "    print(f\"エラー: '{purchase_file}' の読み込み中に予期しないエラーが発生しました: {e}\")\n",
     "    purchase_df = None\n",
     "\n",
     "try:\n",
@@ -214,7 +214,7 @@
     "\n",
     "        # total_purchase_amount = (df_purchase['quantity'] * df_purchase['unit_price']).sum()\n",
     "        # daily_purchase_amount = df_purchase.groupby('purchase_date')[['quantity', 'unit_price']].apply(lambda x: (x['quantity'] * x['unit_price']).sum()).to_dict()\n",
-    "        product_purchase_amount = df_purchase.groupby('item_name')[['quantity', 'unit_price']].apply(lambda x: (x['quantity'] * x['unit_price']).sum()).sort_values(ascending=False).to_dict()\n",
+    "        product_purchase_amount = df_purchase.groupby('item_name')[['quantity', 'unit_price']].apply(lambda x: (x['quantity'] * x['unit_price']).sum()).sort_values(\"item_name\", ascending=False).to_dict()\n",
     "        # supplier_purchase_amount = df_purchase.groupby('supplier_name')[['quantity', 'unit_price']].apply(lambda x: (x['quantity'] * x['unit_price']).sum()).sort_values(ascending=False).to_dict()\n",
     "\n",
     "        purchase_kpis = {\n",
