test: execute / all kpis are 0

--- a/KPI.ipynb
+++ b/KPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "updhLCBpXCcx"
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "X1pBqrYkX_eb"
    },
@@ -53,11 +53,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "p08Xiq_tYMRc"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'data/customer_data.csv' を読み込みました。\n",
+      "'data/purchase_data.csv' を読み込みました。\n",
+      "'data/sales_data.csv' を読み込みました。\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    customer_df = pd.read_csv(customer_file)\n",
@@ -101,11 +111,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "jhPv1FMeYX7_"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "売上KPIを算出します。\n"
+     ]
+    }
+   ],
    "source": [
     "sales_kpis = {}\n",
     "if sales_df is not None and not sales_df.empty:\n",
@@ -156,11 +174,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "3tWdyo8wYhUj"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "顧客KPIを算出します。\n"
+     ]
+    }
+   ],
    "source": [
     "customer_kpis = {}\n",
     "if customer_df is not None and not customer_df.empty and sales_df is not None and not sales_df.empty and 'customer_id' in sales_df.columns and 'sales_date' in sales_df.columns:\n",
@@ -194,11 +220,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "pBgIdiiAYq4f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "仕入れKPIを算出します。\n"
+     ]
+    }
+   ],
    "source": [
     "purchase_kpis = {}\n",
     "if purchase_df is not None and not purchase_df.empty:\n",
@@ -240,11 +274,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "jUaAObEDYyQi"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- 分析結果 ---\n",
+      "{\n",
+      "    \"sales_kpis\": {\n",
+      "        \"member_sales\": 0.0\n",
+      "    },\n",
+      "    \"customer_kpis\": {\n",
+      "        \"repeat_customers\": 0,\n",
+      "        \"average_purchase_frequency\": 0\n",
+      "    },\n",
+      "    \"purchase_kpis\": {\n",
+      "        \"product_purchase_amount\": {\n",
+      "            \"quantity\": {},\n",
+      "            \"unit_price\": {}\n",
+      "        }\n",
+      "    }\n",
+      "}\n",
+      "データ分析を完了しました。\n"
+     ]
+    }
+   ],
    "source": [
     "results = {\n",
     "    \"sales_kpis\": sales_kpis,\n",
